src/test/ui/feature-gates/feature-gate-asm.stderr
error[E0658]: use of unstable library feature 'asm': inline assembly is not stable enough for use and is subject to change
  --> $DIR/feature-gate-asm.rs:5:9
   |
LL |         asm!("");
   |         ^^^
   |
   = note: see issue #70173 <https://github.com/rust-lang/rust/issues/70173> for more information
   = help: add `#![feature(asm)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'llvm_asm': inline assembly is not stable enough for use and is subject to change
  --> $DIR/feature-gate-asm.rs:7:9
   |
LL |         llvm_asm!("");
   |         ^^^^^^^^
   |
   = note: see issue #70173 <https://github.com/rust-lang/rust/issues/70173> for more information
   = help: add `#![feature(llvm_asm)]` to the crate attributes to enable

warning: use of deprecated item 'asm': the syntax of asm! will change soon, use llvm_asm! to avoid breakage
  --> $DIR/feature-gate-asm.rs:5:9
   |
LL |         asm!("");
   |         ^^^ help: replace the use of the deprecated item: `llvm_asm`
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
